# skipy

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
skipy/: __init__.py  chatwork_wrapper.py  drive_wrapper.py  selenium_wrapper.py  slack_wrapper.py  spreadsheet_wrapper.py
skipy/AWS/: __init__.py  utils.py
skipy/Chatwork/: __init__.py  __wrapper.py
skipy/GCP/: __init__.py  drive.py  sheet.py
skipy/Selenium/: __init__.py  __wrapper.py
skipy/Slack/: __init__.py  __wrapper.py
tests/: test_chatwork.py  test_drive.py  test_parameterstore.py  test_selenium.py  test_sheet.py  test_slack.py
