[tool.poetry]
name = "skipy"
version = "0.1.0"
description = "Skip-tac python modules"
authors = ["syamaguc <programmer2844@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
requests = "^2.31.0"
selenium = "^4.15.2"
boto3 = "^1.29.6"
google-api-python-client = "^2.108.0"
python-magic = "^0.4.27"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
tox = "^4.11.3"
pre-commit = "^3.5.0"
mypy = "^1.7.1"
ruff = "^0.1.6"


[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
# https://docs.astral.sh/ruff/rules/
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
    "D", # pydocstyle
    "N", # pep8-naming
]

line-length = 88

ignore = ["D100","D101", "D102", "D103", "D104", "D107"]

unsafe-fixes = true


[tool.ruff.lint.pydocstyle]
# docstringはgoogle style
convention = "google"

[tool.ruff.per-file-ignores]
# __init__.pyは未使用インポートを許容
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
